<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movies_error_message">An error occurred. Try again.</string>
    <string name="poster_description">Movie poster</string>
    <string name="title_label">Original title</string>
    <string name="release_date_label">Release date</string>
    <string name="user_rating_label">User rating</string>
    <string name="sort_spinner_label">Sort</string>
    <string name="unknown_release_date">Unknown</string>
    <string name="trailers_label">Trailers</string>
    <string name="trailers_error_message">No trailers found</string>
    <string name="reviews_label">Reviews</string>
    <string name="reviews_error_message">No reviews found</string>
    <string name="movie_insertion_toast_message">Movie has been added to favorites</string>
    <string name="movie_deletion_toast_message">Movie has been deleted from favorites</string>
    <string name="favourite_icon_description">Icon for adding and removing a movie from favorites</string>
    <string name="playback_icon_description">Playback icon</string>

    <string-array name="sort_array">
        <item>Most popular</item>
        <item>Top rated</item>
        <item>Favourites</item>
    </string-array>
</resources>
